tests/ifcc-test-output/testfiles-part4_3-errorDoubledec/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:9: error: redefinition of ‘variable’
     int variable = 10;
         ^~~~~~~~
input.c:2:9: note: previous definition of ‘variable’ was here
     int variable = 42;
         ^~~~~~~~

return code: 1
